Add Asset comment for Api